styles.css
/* ... */
.social-link-icons-no-js {
  margin-left: .2em;
  margin-right: .2em;
  text-decoration: none !important;
  color: #73b0b9 !important;
}

.social-link-icons-no-js:hover {
  opacity: .7 !important;
}

/* ABOUT PAGE */

.about-buttons {
  font-size: 12px !important;
}

.card-subtitle {
  color: #17a2b8;
  font-family: 'Poppins', sans-serif;
  font-size: 1.5em;
  text-align: center;
  font-weight: 400;
}

@media (max-width: 500px) {
  .card-subtitle {
    font-size: 1.1em;
  }
  .material-icons {
    font-size: 16px !important;
  }
}

.card-subtitle-left {
  margin-left: 34px;
  color: #17a2b8;
  font-family: 'Poppins';
  font-size: 1em;
  font-weight: 300;
}

.card-flip {
  margin: 1em auto;
  width: 80%;
  border: solid 1em white;
  border-radius: 0.5em;
  transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  -webkit-transform-style: preserve-3d;
  transition: 0.7s;
  -moz-transition: 0.7s;
  -webkit-transition: 0.7s;
  cursor: pointer;
}

.card-flip.background-light:hover {
  box-shadow: 0 0 1em rgb(145, 140, 140) !important;
}

.card-flip.background-dark:hover {
  box-shadow: 0 0 1em rgb(64, 83, 110) !important;
}

.card-flip.flipped {
  transform: rotatey(-180deg);
  -moz-transform: rotatey(-180deg);
  -webkit-transform: rotatey(-180deg);
}

.card-flip .face {
  padding: 1em;
  backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}

.card-flip .front {
  display: block;
}

.card-flip.flipped .front {
  display: none;
}

.card-flip .back {
  transform: rotateY(180deg);
  -moz-transform: rotateY(180deg);
  -webkit-transform: rotateY(180deg);
  display: none;
}

.card-flip.flipped .back {
  display: block;
}

/* PROJECTS PAGE*/

.card-title {
  font-size: 1.7em;
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
}

.fixed-header {
  display: none;
}

@media (min-width: 750px) {
  .fixed-header {
    top: 70px;
    position: fixed !important;
    display: flex;
    width: 100% !important;
    justify-content: center;
    z-index: 999 !important;
    background-color: rgb(255, 255, 255) !important;
    padding-bottom: 50px;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    font-weight: 300;
  }
}

.mdl-layout__inner-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  overflow-x: hidden;
  position: relative;
  -webkit-overflow-scrolling: touch;
}

.project-buttons {
  font-size: 11px !important;
}

.animate-containers {
  -webkit-animation: enter-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
  animation: enter-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

.animate-about {
  webkit-animation: slide-in-fwd-bottom 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: slide-in-fwd-bottom 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}


/* Projects Nav */

@keyframes slideInFromLeft {
  0% {
    transform: translateX(-80%);
  }
  100% {
    transform: translateX(0);
  }
}

/* Projects */

@-webkit-keyframes enter-left {
  0% {
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transform-origin: 0% 0%;
    transform-origin: 0% 0%;
    opacity: 1;
  }
  100% {
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
    -webkit-transform-origin: 0% 0%;
    transform-origin: 0% 0%;
    opacity: 1;
  }
}

@keyframes enter-left {
  0% {
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transform-origin: 0% 0%;
    transform-origin: 0% 0%;
    opacity: 1;
  }
  100% {
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
    -webkit-transform-origin: 0% 0%;
    transform-origin: 0% 0%;
    opacity: 1;
  }
}

/* About Animation */
@-webkit-keyframes slide-in-fwd-bottom {
  0% {
    -webkit-transform: translateZ(-1400px) translateY(800px);
            transform: translateZ(-1400px) translateY(800px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateZ(0) translateY(0);
            transform: translateZ(0) translateY(0);
    opacity: 1;
  }
}
@keyframes slide-in-fwd-bottom {
  0% {
    -webkit-transform: translateZ(-1400px) translateY(800px);
            transform: translateZ(-1400px) translateY(800px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateZ(0) translateY(0);
            transform: translateZ(0) translateY(0);
    opacity: 1;
  }
}



button:focus {
  outline: none !important;
  font-weight: bolder !important;
}

.button-margins {
  margin-left: 30px;
  margin-right: 30px;
}

@media (max-width: 500px) {
  .card-title {
    font-size: 1.2em;
  }
}

.card-title-center {
  text-align: center;
}

.card-title-light {
  color: #917896;
}

.card-title-dark {
  color: #d5aad8 !important;
}

.page-container {
  padding-top: 90px;
  margin-left: 10%;
  margin-right: 10%;
}

.page-container-js-disabled {
  padding-top: 12px;
  margin-left: 10%;
  margin-right: 10%;
}

.page-body-bckg-light {
  z-index: 2;
  background-image: linear-gradient(120deg, rgba(255, 250, 250, 0.274) 0%, rgba(219, 229, 236, 0.404) 100%);
}

.card-columns {
  margin-top: 12px;
  -webkit-column-count: 2;
  -moz-column-count: 2;
  column-count: 2 !important;
  -webkit-column-gap: 1.25rem;
  -moz-column-gap: 1.25rem;
  column-gap: 1.25rem;
  orphans: 1;
  widows: 1;
}

@media (min-width: 992px) {
  .card-columns {
    display: flex;
  }
}

.project-columns {
  display: block !important;
}

@media (min-width: 750px) {
  .project-columns {
    margin-top: 50px;
  }
}

.col-sm {
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 1% !important;
}

@media (max-width: 992px) {
  .card-columns {
    -webkit-column-count: 1;
    -moz-column-count: 1;
    column-count: 1 !important;
    -webkit-column-gap: 1.25rem;
    -moz-column-gap: 1.25rem;
    column-gap: 1.25rem;
    orphans: 1;
    widows: 1;
  }
}
/* ... */

